kubernetes/clusters/KC/external-proxy/immich-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: immich
    namespace: external-proxy
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: ENC[AES256_GCM,data:W3ZnRJXL,iv:P7xeKBmePrerPCx4dVcfW5WM4e26Nz39bGcGHebMLi8=,tag:nvw6mi64WU8+UL0weCouwg==,type:str]
          port: ENC[AES256_GCM,data:kDp+YOU=,iv:3vtMOvRS4TBQ7UDRswtoHZTcdzZcz55ULnff3gr33bg=,tag:koi3rOiDqnmZfI8hAe9PZg==,type:int]
          targetPort: ENC[AES256_GCM,data:12ob/QY=,iv:JynkRAnAoa3vb389ErbZrSCdzdlmaA8n8bKLkAJmiCg=,tag:Kg6Crylff/xVntPTHaG82w==,type:int]
    externalName: ENC[AES256_GCM,data:2IZP21ocV7QBVUY=,iv:Xpnnc2Xzybg04Lewjziwfslrojhe3dFDG6h0viiq6DA=,tag:mjfd0BLNyRbnwWH5dhKclw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiTTZlaHlTOGxiWEpVNVB4
[...]
            N35ycH1LRw//LaN3+kC0NrxoVx+VLkuTeajkd+2bLmj7tGZWLgA4NA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-09T14:24:45Z"
    mac: ENC[AES256_GCM,data:mlC/UDEGMF25uuM0HzoePu1fuD6kv36ObBec/LSfFUpP2e2yhC0/IKjmkZAPMumuDS0OCYRt8hj+NxISsSbYSkBs3BWhhS1YGPc+ZjEvpcqMIlS11ShR4ojCpLBK70EQ5rJwpIMF9eAXG6bVGjtb2MSBAn1Az70kDvEgYklrH4w=,iv:9VJVUuqMNRT/q4rdIjel8i3iSnJpFXA1xPXl0/ET2Uw=,tag:F+yGI3aZmhC35PbIL93ecA==,type:str]
    pgp: []
    encrypted_regex: ^(data|ports|externalName)$
    version: 3.8.1
