kubernetes/clusters/KC/external-proxy/sabnzbd-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sabnzbd
    namespace: external-proxy
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: ENC[AES256_GCM,data:CChoqunO/w==,iv:SXFcswQrQUca7IMGaBM86j7zQaBoguOuqR4l61xbAk8=,tag:T8htg1P/GgkLWZQoOl+ugQ==,type:str]
          port: ENC[AES256_GCM,data:N7ihJQ==,iv:0ERHq2vjEs8VDf0Y6a0MjSONHjo8UlBmsuTy2OJc7oc=,tag:qmKa7RVaIslbCbz7wCJzqA==,type:int]
          targetPort: ENC[AES256_GCM,data:H7qXlQ==,iv:w5ZLvRteJRHEGwVFtD/9yVeU2xysgBAXrUQl3pGloB8=,tag:hlQ2GvF4AyPSUzAjn7jFvg==,type:int]
    externalName: ENC[AES256_GCM,data:MVPqFJZiNOJWcgM=,iv:SQQ8OTTy5ZHdjgFFeP7ubjkOC1Y3mt/Zgz6DG99YFZE=,tag:efolWZt7OmxTVBSMps3VIg==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4ZU93SGRpSDZBRUZkdTRH
[...]
            8afRlBB2bgoQdZ07Pd699H03wP4OnPwSr2DGIXFNBVy1vd89bYYNFA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-05-01T19:56:10Z"
    mac: ENC[AES256_GCM,data:vXHa2CNsOUeCxTgykevblaB9w0idkcnHaYYOO5NcgVxSrTmZraLWxph3gtkdIIZxXNjsQgULghSvlNqBCsQmHkJ7GQjlQWXleuZWyu6wgT2Qjb+7LHFtJzAH1hwPoiz9vbwyzaMsDiFsr06mcF8s6PSAzck77wbtaSMS9pMovzs=,iv:nzbomP/tYWfvdrzjzZsiutSfPZmMqDAlMfWZipO8pcs=,tag:hBQlniJknxr1Z0CLq/lUTw==,type:str]
    pgp: []
    encrypted_regex: ^(data|ports|externalName|loadBalancerIP)$
    version: 3.8.1
