kubernetes/clusters/KC/external-proxy/deluge-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: deluge
    namespace: external-proxy
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:8ieIwwaaRwg/pKApL2G9LlEK3cbpA+Xsb5o=,iv:b7ZSCfwWwXvexqvoOTyixC4Ibvc72gjB8a5cE3y136w=,tag:YlFwH4SkDg7/6DiIS3c2aQ==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:WYCozSpd,iv:Zqp5YizjoST1nPEVtbUUsPFhW4Uk/M5nFyqnIrMXgJ8=,tag:ROC42pe/2qEGLvFqrhxBSA==,type:str]
              port: ENC[AES256_GCM,data:YQ2FqQ==,iv:yRAmmI9/EYRpDEFF78XPv/3pUn8V4e32knydQ/9zSCc=,tag:kpKb6Iw3+Eqj+aizbzqqBQ==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:myWpDCBhK3OSUUo=,iv:De9S3vtvrqILxohbxr/UQZfeZid3+BF9HQ6XzS6sXsY=,tag:LVcsYXhrjaqLPQq6LGdGbQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkeEc2aFRGMEhiblIrM3Fp
[...]
            RUbTNK0Qui7tvlP0bxSr70/hElGLk6T9JG7NUPTxAdq3zDduzunLAw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-09T14:26:37Z"
    mac: ENC[AES256_GCM,data:hYffuvDAlizB6lXyMZ2fQ2zTYMMdU/B9JOtqzG4/l1VKdqj/vmpqV3kpL5ooY15U1iwixNuQrvZ455WAK+XotIXgZP/fNgAjZvUNx5+SDMPNf5LjpQTTITefnBY1a3wi7S0xXw8PT3jCZuahiWZJfCQrMxrTpil4JMpQF6/sasI=,iv:3M8s4eck+FuzqLLEyuScbXQIAM8MhDetaYP/zRegwoM=,tag:1o6ErGf0u26BzON8TGW6Zg==,type:str]
    pgp: []
    encrypted_regex: ^(data|match|secretName|services)$
    version: 3.8.1
