kubernetes/clusters/KC/external-proxy/sabnzbd-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: sabnzbd
    namespace: external-proxy
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:aXS4e6WPKMo8w3cJL/kNMmbW4r4j1F6qBSEv,iv:EBLDgx5huZlezWB6xe0R8Nx2kqF0TU25Ijwr5tLxzCU=,tag:0Sto/YKRiBmojo/F7jAgRA==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:w3s8cdxlJA==,iv:twNj68zdqxnI8wYqy+n1HQ4BQLeSLs4h5iwlTz+1q6g=,tag:bEdEGQ5zKvWo/zTpXWufRA==,type:str]
              port: ENC[AES256_GCM,data:hIVJqJo=,iv:MZNvXhnvKfNh33Bke0AXoJPOsWr2zsvjukkpWgxyPNg=,tag:wp8LuNntOHAzqyhTfGqzCg==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:74e9cXtdOwtgNvE=,iv:ZmdS7hILdrMEt4WpgrdSfReRS8jGb0pgRZslunwsi/g=,tag:ZdFxAgfagKnxC0yiIaw2Zw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJbmdSaDAwMGZ5K283UVRT
[...]
            mkqeceyQlhxUVnTtNaynq8uNVrEXS5UQjr5RQfStmcMbRsaFtkEsPg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-09T14:27:49Z"
    mac: ENC[AES256_GCM,data:8pWIWczxd/rF0OkTPQIgbbV43siTK2/eTNPJOrF6HHaMgQ+toFQlbL0k/MWPuo3s6u1jNQlwo95bjWegJ6jwGuBl329NEq1RaLtKQ5AISwZ+zj5LTaYjk4qMHzHN+BaXDvi5vmM+3311YLc5g38L+V89+ErAi/BUqjLs06phzyI=,iv:fUDTpKIYgwRybbqtiDv+owTQlckUipxn7JQJIBS3ePg=,tag:limURBcWgG/AxhKwl6hCFA==,type:str]
    pgp: []
    encrypted_regex: ^(data|match|secretName|services)$
    version: 3.8.1
