kubernetes/clusters/KC/external-proxy/syncthing-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: syncthing
    namespace: external-proxy
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:DtXgN+BhUv23CXYA1pB1TEuwVmaj0nfdu+sR0ME=,iv:Q3cLAjcgIDdf7TMGAGqSfFJKOiUPy2TB3nxNWZrUbBM=,tag:TdHMKpLmChMOs3ydhdo5Ew==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:sxYIX8BI9p0X,iv:ho8iyQQIMSeDTqqlP4paG6u1H7LKbrRkCZGUQeZRx5c=,tag:FH7XQ2Gl0AY4ebp5bp4TJA==,type:str]
              port: ENC[AES256_GCM,data:Oek=,iv:IV1NLG5AJVia+TNWRyNKBlbLFinkzl7M/DUiBXfAoug=,tag:vPfO0U4+jAzxUGKtI6O8Og==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:4CwU/fflQkkWDZE=,iv:38QzIVoI+j6mTwkS56hKif4dMuLxUM9sfuqBYHLTvsw=,tag:H/6XBKjrZt5M1MejEuOKWg==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBM0RwV2tzSDAyc0Q5UFA2
[...]
            YX7Qv9y4cIOXMRarY4pllBRY/0OXsu9haRhMSxXNWTQG2Ip2JaHzUQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-05-02T16:02:36Z"
    mac: ENC[AES256_GCM,data:+4s8fJ08pOG4QNsrP24tkrJROvA18Tf8mcYEoAGgyJfZ0fSIvO7DAfghZqxgD2hP72TJZaBZI9XJJ6HV1kaULFzNRefhkgCZQwDlBwAaiTkpVZoP0S/7+0Fv+FMFXEUYpTTacRmDIlGSVQd1FEIpKD6jo1QRBXNb2rsJn2sa9wE=,iv:31afNHczOLLwmwj2um4pdbQiib4dVV9mwUrAtaZlclk=,tag:96N0FsCUcaYLtNDIJFFTvw==,type:str]
    pgp: []
    encrypted_regex: ^(data|match|secretName|services)$
    version: 3.8.1
